NetS13nSW: Skip making a handler for subresource requests

Bug: 830291
Change-Id: I1b1b6fe8c20bd1384e8e01cb9521481b38c4c1cb
Reviewed-on: https://chromium-review.googlesource.com/1025672
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553423}
Former-commit-id: 316143da2ae63a95c4779aa951af224ce9da6f7e